fix position mobile menu

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -56,7 +56,7 @@
   width: 75vw;
   height: 100vh;
   background-color: #202020;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   padding: 159px 0 92px;
